[package]
name = "rstest"
version = "0.6.4"
authors = ["Michele d'Amico <michele.damico@gmail.com>"]
homepage = "https://github.com/la10736/rstest"
description = """
Rust fixture based test framework. It use procedural macro
to implement fixtures and table based tests.
"""
repository = "https://github.com/la10736/rstest"
license = "MIT/Apache-2.0"
keywords = ["test", "fixture"]
categories = ["development-tools::testing"]
readme = "README.md"
edition = "2018"
exclude = [
    "/playground",
    "/rstest_fixtures"
]

[workspace]
members = [
    "rstest_test",
]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.17", features = ["full", "parsing", "extra-traits", "visit"] }
proc-macro2 = "1.0.10"
quote = "1.0.3"
cfg-if = "0.1.10"

[dev-dependencies]
temp_testdir = "0.2.3"
lazy_static = "1.4.0"
pretty_assertions = "0.6.1"
unindent = "0.1.5"
actix-rt = "1.1.0"
mytest = { package = "rstest", version = "0.6.3" }
rstest_test = "0.1.0"

[build-dependencies]
rustc_version = "0.2.3"
