[package]
name = "playground"
version = "0.1.0"
authors = ["michele <michele.damico@gmail.com>"]
edition = "2018"

[features]
default = []
# Depends on nightly
trace_all = []

[dependencies]
lazy_static = "*"
async-std = { version="1.5", features = ["attributes"] }

[dependencies.rstest]
path = "../"
version = "*"

[dependencies.rstest_reuse]
path = "../rstest_reuse"
version = "*"
