[package]
authors = ["michele <michele.damico@gmail.com>"]
edition = "2018"
name = "playground"
version = "0.1.0"

[features]
default = []
# Depends on nightly
trace_all = []

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
lazy_static = "1.4.0"

[dependencies.rstest]
path = "../rstest"
version = "*"

[dependencies.rstest_reuse]
path = "../rstest_reuse"
version = "*"
