[package]
authors = ["michele <michele.damico@gmail.com>"]
edition = "2018"
name = "playground"
version = "0.1.0"

[features]
default = []
build-rs = []

[dependencies]
async-std = { version = "1.13.0", features = ["attributes"] }
lazy_static = "1.4.0"

[dependencies.rstest]
path = "../rstest"
version = "0.24.0-dev"

[dependencies.rstest_reuse]
path = "../rstest_reuse"
version = "*"
