[package]
authors = ["Michele d'Amico <michele.damico@gmail.com>"]
categories = ["development-tools::testing"]
description = """
Rust fixture based test framework. It use procedural macro
to implement fixtures and table based tests.
"""
edition = "2021"
homepage = "https://github.com/la10736/rstest"
keywords = ["test", "fixture"]
license = "MIT OR Apache-2.0"
name = "rstest"
readme = "README.md"
repository = "https://github.com/la10736/rstest"
rust-version = "1.70.0"
version = "0.26.1"

[features]
async-timeout = [
    "dep:futures-timer",
    "dep:futures-util",
    "rstest_macros/async-timeout",
]
crate-name = ["rstest_macros/crate-name"]
default = ["async-timeout", "crate-name"]

[lib]

[dependencies]
futures-timer = { version = "3.0.3", optional = true }
futures-util = { version = "0.3.30", optional = true }
rstest_macros = { version = "0.26.1", path = "../rstest_macros", default-features = false }

[dev-dependencies]
actix-rt = "2.9.0"
async-std = { version = "1.13.0", features = ["attributes"] }
lazy_static = "1.5.0"
macro_rules_attribute = "0.2.0"
mytest = { package = "rstest", version = "0.25.0", default-features = false }
rstest_test = { path = "../rstest_test" }
smol-macros = "0.1.1"
temp_testdir = "0.2.3"
tokio = { version = "1.38.1", features = ["rt", "macros"] }
unindent = "0.2.3"
