[package]
authors = ["Michele d'Amico <michele.damico@gmail.com>"]
categories = ["development-tools::testing"]
description = """
Rust fixture based test framework. It use procedural macro
to implement fixtures and table based tests.
"""
edition = "2018"
homepage = "https://github.com/la10736/rstest"
keywords = ["test", "fixture"]
license = "MIT/Apache-2.0"
name = "rstest_macros"
repository = "https://github.com/la10736/rstest"
version = "0.15.0"

[lib]
proc-macro = true

[features]
async-timeout = []
default = ["async-timeout"]

[dependencies]
cfg-if = "1.0.0"
proc-macro2 = "1.0.27"
quote = "1.0.9"
syn = {version = "1.0.72", features = ["full", "parsing", "extra-traits", "visit", "visit-mut"]}

[dev-dependencies]
actix-rt = "2.2.0"
async-std = {version = "1.9.0", features = ["attributes"]}
pretty_assertions = "1.0.0"
rstest = {version = "0.14.0", default-features = false}
rstest_reuse = {version = "0.4.0", path = "../rstest_reuse"}
rstest_test = {version = "0.8.0", path = "../rstest_test"}

[build-dependencies]
rustc_version = "0.4.0"
