[package]
authors = ["Michele d'Amico <michele.damico@gmail.com>"]
categories = ["development-tools::testing"]
description = """
Rust fixture based test framework. It use procedural macro
to implement fixtures and table based tests.
"""
edition = "2021"
homepage = "https://github.com/la10736/rstest"
keywords = ["test", "fixture"]
license = "MIT OR Apache-2.0"
name = "rstest_macros"
repository = "https://github.com/la10736/rstest"
version = "0.18.2"

[lib]
proc-macro = true

[features]
async-timeout = []
default = ["async-timeout"]

[dependencies]
cfg-if = "1.0.0"
glob = "0.3.1"
proc-macro2 = "1.0.39"
quote = "1.0.19"
regex = "1.7.3"
relative-path = "1.8.0"
syn = { version = "2.0.2", features = [
    "full",
    "parsing",
    "extra-traits",
    "visit",
    "visit-mut",
] }
unicode-ident = "1.0.5"

[dev-dependencies]
actix-rt = "2.7.0"
async-std = { version = "1.12.0", features = ["attributes"] }
maplit = "1.0.2"
pretty_assertions = "1.2.1"
rstest = { version = "0.18.1", default-features = false }
rstest_reuse = { version = "0.6.0", path = "../rstest_reuse" }
rstest_test = { version = "0.11.0", path = "../rstest_test" }

[build-dependencies]
rustc_version = "0.4.0"
