[package]
authors = ["Michele d'Amico <michele.damico@gmail.com>"]
categories = ["development-tools::testing"]
description = """
Rust fixture based test framework. It use procedural macro
to implement fixtures and table based tests.
"""
edition = "2021"
homepage = "https://github.com/la10736/rstest"
keywords = ["test", "fixture"]
license = "MIT OR Apache-2.0"
name = "rstest_macros"
repository = "https://github.com/la10736/rstest"
rust-version = "1.70.0"
version = "0.26.1"

[lib]
proc-macro = true

[features]
async-timeout = []
default = ["async-timeout", "crate-name"]
crate-name = ["dep:proc-macro-crate"]

[dependencies]
cfg-if = "1.0.0"
glob = "0.3.1"
proc-macro2 = "1.0.86"
quote = "1.0.37"
regex = "1.10.6"
relative-path = "1.9.3"
syn = { version = "2.0.79", features = [
    "full",
    "parsing",
    "extra-traits",
    "visit",
    "visit-mut",
] }
unicode-ident = "1.0.13"
proc-macro-crate = { version = "3.2.0", optional = true }

[dev-dependencies]
maplit = "1.0.2"
pretty_assertions = "1.4.1"
rstest = { version = "0.26.0", default-features = false }
rstest_reuse = { path = "../rstest_reuse" }
rstest_test = { path = "../rstest_test" }

[build-dependencies]
rustc_version = "0.4.1"
