[package]
authors = ["Michele d'Amico <michele.damico@gmail.com>"]
categories = ["development-tools::testing"]
description = """
Provides some utilities used by to write rstest crate's tests.
"""
edition = "2018"
homepage = "https://github.com/la10736/rstest"
keywords = ["test"]
license = "MIT/Apache-2.0"
name = "rstest_test"
readme = "README.md"
repository = "https://github.com/la10736/rstest"
version = "0.8.0"

[dependencies]
regex = "1.5.4"
toml_edit = "0.15.0"

[dev-dependencies]
lazy_static = "1.4.0"
temp_testdir = "0.2.3"
