[package]
authors = ["Michele d'Amico <michele.damico@gmail.com>"]
categories = ["development-tools::testing"]
description = """
Provides some utilities used by to write rstest crate's tests.
"""
edition = "2021"
homepage = "https://github.com/la10736/rstest"
keywords = ["test"]
license = "MIT OR Apache-2.0"
name = "rstest_test"
readme = "README.md"
repository = "https://github.com/la10736/rstest"
rust-version = "1.69.0"
version = "0.12.0"

[dependencies]
regex = "1.5.6"
toml_edit = "=0.21.0"

[dev-dependencies]
lazy_static = "1.4.0"
rstest = { version = "0.19.0", default-features = false }
temp_testdir = "0.2.3"
